fix too much noise on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -148,7 +148,13 @@ body::before {
 
 .dark body::before {
   filter: invert(1);
-  opacity: .15;
+  opacity: .1;
+}
+
+@media screen and (min-width: 48rem /* md */) {
+  .dark body::before {
+    opacity: .15;
+  }
 }
 
 @media screen and (min-width: 96rem /* 2xl */) {
